turtleart.lessons.turtleart.Main.HouseMany.scala.error
Source:23: error: Invalid literal number
	def 4maison() {
            ^Source:33: error: Invalid literal number
	4maison()
        ^